--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 /lib
 /test-reports/
 build/Release
+cdk.context.json
+cdk.out
 cdk.out/
 coverage
 jspm_packages/
@@ -33,6 +35,7 @@ yarn-error.log*
 !/.eslintrc.json
 !/.gitattributes
 !/.github/pull_request_template.md
+!/.github/workflows/auto-approve.yml
 !/.github/workflows/build.yml
 !/.github/workflows/stale.yml
 !/.github/workflows/upgrade-dependencies.yml
