--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
     "url": "https://github.com/neilkuan/eks-asg-lt-nodegroup.git"
   },
   "scripts": {
+    "build": "npx projen build",
+    "bundle": "npx projen bundle",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
-    "test:compile": "npx projen test:compile",
-    "test": "npx projen test",
-    "build": "npx projen build",
-    "test:watch": "npx projen test:watch",
-    "test:update": "npx projen test:update",
-    "upgrade-dependencies": "npx projen upgrade-dependencies",
-    "upgrade-projen": "npx projen upgrade-projen",
     "default": "npx projen default",
-    "eslint": "npx projen eslint",
-    "synth": "npx projen synth",
     "deploy": "npx projen deploy",
     "destroy": "npx projen destroy",
     "diff": "npx projen diff",
-    "projen": "npx projen",
-    "start": "npx projen start"
+    "eslint": "npx projen eslint",
+    "package": "npx projen package",
+    "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
+    "pre-compile": "npx projen pre-compile",
+    "synth": "npx projen synth",
+    "synth:silent": "npx projen synth:silent",
+    "test": "npx projen test",
+    "test:update": "npx projen test:update",
+    "test:watch": "npx projen test:watch",
+    "upgrade": "npx projen upgrade",
+    "upgrade-projen": "npx projen upgrade-projen",
+    "watch": "npx projen watch",
+    "projen": "npx projen"
   },
   "author": {
     "name": "Neil Kuan",
@@ -29,39 +34,41 @@
     "organization": false
   },
   "devDependencies": {
+    "@aws-cdk/assert": "^1.139.0",
+    "@aws-cdk/assertions": "^1.139.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^10.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "aws-cdk": "^1.95.2",
-    "eslint": "^7.32.0",
+    "@types/node": "^12",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "aws-cdk": "^1.139.0",
+    "esbuild": "^0.14.11",
+    "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "jest": "^27.4.7",
-    "jest-junit": "^12",
+    "jest-junit": "^13",
     "json-schema": "^0.4.0",
-    "npm-check-updates": "^11",
-    "projen": "^0.27.5",
+    "npm-check-updates": "^12",
+    "projen": "0.50.24",
     "ts-jest": "^27.1.2",
     "ts-node": "^9",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@aws-cdk/assert": "^1.95.2",
-    "@aws-cdk/aws-autoscaling": "^1.95.2",
-    "@aws-cdk/aws-ec2": "^1.95.2",
-    "@aws-cdk/aws-eks": "^1.95.2",
-    "@aws-cdk/aws-iam": "^1.95.2",
-    "@aws-cdk/core": "^1.95.2"
+    "@aws-cdk/aws-autoscaling": "^1.139.0",
+    "@aws-cdk/aws-ec2": "^1.139.0",
+    "@aws-cdk/aws-eks": "^1.139.0",
+    "@aws-cdk/aws-iam": "^1.139.0",
+    "@aws-cdk/core": "^1.139.0",
+    "constructs": "^3.2.27"
   },
-  "bundledDependencies": [],
   "license": "Apache-2.0",
   "version": "0.0.0",
   "jest": {
     "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -69,6 +76,7 @@
       "json",
       "lcov",
       "clover",
+      "cobertura",
       "text"
     ],
     "coverageDirectory": "coverage",
@@ -93,7 +101,7 @@
     "preset": "ts-jest",
     "globals": {
       "ts-jest": {
-        "tsconfig": "tsconfig.jest.json"
+        "tsconfig": "tsconfig.dev.json"
       }
     }
   },
